2013-06-24 Riccardo Mottola <rm@gnu.org>

	* GRText.m
        Rewrite string drawing, use drawInRect and disregard paragraph space.

2013-06-23 Riccardo Mottola <rm@gnu.org>

	* GRBezierControlPoint.m
	* GRBezierPath.m
	* GRBezierPathEditor.m
	* GRBox.h
	* GRBox.m
	* GRBoxEditor.m
	* GRCircle.h
	* GRCircle.m
	* GRCircleEditor.m
	* GRDocView.m
	* GRDrawableObject.h
	* GRDrawableObject.m
	* GRFunctions.h
	* GRFunctions.m
	* GRObjectControlPoint.m
	* GRText.m
	Keep the zoom factor as a separate property and keep the original size and position, independently of zoom

2013-06-16 Riccardo Mottola <rm@gnu.org>

	* GRBezierPathEditor.m
	* GRBezierControlPoint.m
        Fix drawing of unselected controlpoints.

2013-06-14 Riccardo Mottola <rm@gnu.org>

	* GRBezierControlPoint.h
	* GRBezierControlPoint.m
	* GRBezierPathEditor.m
	Simplify and refactor drawing inside the BezierControlPoint.

	* GRText.m
	Fix zoomed drawing.

	* GRCircle.m
	Cleanup drawing, make guides slightly stronger.

2013-06-13 Riccardo Mottola <rm@gnu.org>

	* GRBoxEditor.m
	* GRCircleEditor.m
	* GRObjectControlPoint.h
	* GRObjectControlPoint.m
	Refactor drawing into the Object Control Point

2013-03-01 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Check loop condition better due to unsigned transition.

2013-03-01 Riccardo Mottola <rm@gnu.org>

	* GRBezierControlPoint.h
	* GRBezierControlPoint.m
	* GRBox.m
	* GRCircle.m
	Transitions to CGFLoat missed in the previous commit.

2013-03-01 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.h
	* GRBezierPath.m
	* GRObjectControlPoint.h
	* GRObjectControlPoint.m
	* GRText.h
	* GRText.m
	CGFloat transition

2013-02-28 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m (deepCopyObjects)
	Return an autoreleased array.

2013-02-28 Riccardo Mottola <rm@gnu.org>

	* GRTextEditorView.m
	Fix warnings.

2013-02-25 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	When selecting with shift, unselect an already selected object.

2013-02-24 Riccardo Mottola <rm@gnu.org>
